--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 instagram_username: cash_hola
-github_username:  cashc
-domain: cashc.github.io
-url: https://cashc.github.io
-baseurl: /hello-world-starter-website/
+github_username:  foragingformore
+domain: foragingformore.github.io
+url: https://foragingformore.github.io
+baseurl: /foragingformore/
 
 # Build settings
 markdown: kramdown
