--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-instagram_username: cash_hola
+# instagram_username: cash_hola
 github_username:  foragingformore
-domain: foragingformore.github.io
-url: https://foragingformore.github.io
-baseurl: /foraging-for-more/
 
 # Build settings
 markdown: kramdown
