--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: hello, world
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Foraging For More
+email: jrindskopf@gmail.com
+description: Explorations in Human Nature. Poetry, prose, and pictures for finding meaning amidst people, plants, and mushrooms.
+author: Jeffrey Rindskopf
 # instagram_username: cash_hola
-github_username:  foragingformore
 
 # Build settings
 markdown: kramdown
